--- a/PDD/CMakeLists.txt
+++ b/PDD/CMakeLists.txt
@@ -1,3 +1,6 @@
+set (CMAKE_C_COMPILER "/home/hnu/Disk0/monica/hyc/gcc940/bin/gcc")
+set (CMAKE_CXX_COMPILER "/home/hnu/Disk0/monica/hyc/gcc940/bin/g++")
+# set (CMAKE_CXX_COMPILER "g++")
 project(ParallelSubgraphMatching)
 
 include_directories(
@@ -5,7 +8,7 @@ include_directories(
 )
 
 set(CMAKE_CXX_FLAGS
-        "${CMAKE_CXX_FLAGS} -std=c++17 -O3 -g -Wall -march=native -pthread -mcmodel=large")
+        "${CMAKE_CXX_FLAGS} -std=c++17 -O3 -g -Wall -march=native -mavx2 -pthread -mcmodel=large")
 
 add_subdirectory(configuration)
 add_subdirectory(graph)
